2014-01-07 Marco Randazzo <marco.randazzo@iit.it>
    * yarp2\src\libYARP_sig\src\SoundFile.cpp
    * yarp2\src\libYARP_sig\include\yarp\sig\SoundFile.cpp
    fixed a critical bug in the size of the storage of the sound type. This was causing a 'click' at the end of the sound reproduction.
    fixed a race condition in the variable pThread.something_to_play, occuring during continous stream of sound packets (e.g. real time playback from a microphone) 
    
2014-01-02 Marco Randazzo <marco.randazzo@iit.it>
    * yarp2\src\libYARP_sig\src\SoundFile.cpp
    * yarp2\src\libYARP_sig\include\yarp\sig\SoundFile.cpp
    added soundStreamReader class to incrementally read chunks of sound file (instead of the whole file)
 
    * /example/portaudio/sound_sender_file_chunks.cpp
    added example to demonstrate use of soundStreamReader class 
 
    * /example/portaudio/sound_sender_file_sum.cpp
    added example to demonstrate the use of += operator for yarp::sig::Sound
    
2013-12-23 Marco Randazzo <marco.randazzo@iit.it>
    * yarp2\src\libYARP_sig\src\sound
    added yarp::sig::Sound::subSound() method to split a sound into two subsounds
    * yarp2\src\modules\portaudio
    New implementation for the portaudio device driver using callback and ring buffers.
    PortAudioDeviceDriver::renderSound() function now is not blocking
    Two playback methods now available: RENDER_IMMEDIATE, RENDER_APPEND

2013-12-21 Marco Randazzo <marco.randazzo@iit.it>
    * /src/libYARP_sig/include/sound.h
    * /src/libYARP_sig/src/sound.cpp
    added += operator to yarp::sig::Sound 
    
    * /example/portaudio/sound_sender_file
    improved example
    
2013-12-18 Marco Randazzo <marco.randazzo@iit.it>
    * src\libYARP_sig\src\soundfile.cpp
    fixed a bug preventing .wav files containing non-data chucks to be loaded correctly
    
2013-12-12 Marco Randazzo <marco.randazzo@iit.it>
    * example/portaudio 
    added example: read audio from a file and send data to a port 
    